--- a/src/components/ActionBoard/css/ActionBoard.module.css
+++ b/src/components/ActionBoard/css/ActionBoard.module.css
@@ -1,20 +1,17 @@
 .Container {
-  width: 100%;
-}
-.ActionBoard {
-  padding: 20px;
-
   width: 580px;
   height: 250px;
-  margin: auto;
+  margin: 20px;
 
-  background: #e3e3e3;
+  background: rgb(227, 227, 227);
   border: 4px solid #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 19px;
 }
+.ActionBoard {
+  padding: 0 10px;
+  overflow: scroll;
 
-.Age {
-  font-size: 1.7em;
-  margin-bottom: 15px;
+  height: 180px;
+  margin: auto;
 }
